--- a/CookPal/app/src/main/AndroidManifest.xml
+++ b/CookPal/app/src/main/AndroidManifest.xml
@@ -18,7 +18,19 @@
             android:label="facebook"
             android:windowSoftInputMode="adjustResize|stateHidden" >
         </activity>
+        <activity
+            android:name=".RecipeList"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".AddRecipeActivity"
+            android:label="@string/title_activity_add_recipe" >
+        </activity>
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
