created tabs for recipe page

--- a/CookPal/app/src/main/AndroidManifest.xml
+++ b/CookPal/app/src/main/AndroidManifest.xml
@@ -67,7 +67,8 @@
         </activity>
         <activity
             android:name=".RecipeActivity"
-            android:label="@string/title_activity_recipe" >
+            android:label="@string/title_activity_recipe"
+            android:theme="@style/RecipeABTheme">
         </activity>
     </application>
     <!-- To access Google+ APIs: -->
