--- a/CookPal/app/src/main/AndroidManifest.xml
+++ b/CookPal/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
         </activity>
         <activity
             android:name=".RecipeList"
-            android:label="RECIPE"
+            android:label="@string/title_activity_cookbook"
             android:theme="@style/RecipeABTheme" >
         </activity>
         <activity
