--- a/CookPal/app/src/main/AndroidManifest.xml
+++ b/CookPal/app/src/main/AndroidManifest.xml
@@ -50,11 +50,9 @@
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/APP_ID" />
-        <!--
             <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
-        -->
 
         <activity
             android:name=".TestJSON"
@@ -76,7 +74,8 @@
     </application>
     <!-- To access Google+ APIs: -->
     <uses-permission android:name="android.permission.INTERNET" />
-
+    <!-- To access Google Analytics API -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <!--
      To retrieve OAuth 2.0 tokens or invalidate tokens to disconnect a user. This disconnect
      option is required to comply with the Google+ Sign-In developer policies
