--- a/CookPal/app/src/main/AndroidManifest.xml
+++ b/CookPal/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/APP_NAME"
+        android:name=".CookPalApp"
         android:theme="@style/AppTheme" >
         <activity
             android:name=".AccountActivity"
@@ -42,18 +43,15 @@
             android:name=".AddRecipeActivity"
             android:label="@string/title_activity_add_recipe" >
         </activity>
-        <!--
-            <meta-data
-
-            android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version" />
-        -->
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/APP_ID" />
-            <meta-data
-            android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version" />
+        <meta-data
+        android:name="com.google.android.gms.version"
+        android:value="@integer/google_play_services_version" />
+        <!-- Analytics API v4 needs this value for easy tracking -->
+        <meta-data android:name="com.google.android.gms.analytics.globalConfigResource"
+            android:resource="@xml/global_tracker" />
 
         <activity
             android:name=".TestJSON"
