--- a/CookPal/app/src/main/AndroidManifest.xml
+++ b/CookPal/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/icon"
         android:label="@string/APP_NAME"
         android:name=".CookPalApp"
         android:theme="@style/AppTheme" >
